--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           what to expect in the coming future as far as the course is concerned.</p> 
     </td>
     <td>
-	<img src="Images/myPic.jpeg" width=300px></img>
+	<img src="data/myPic.jpeg" width=500px></img>
     </td>
   </tr>
   <tr>
